--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,86 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Yijie Li
+    - name: Occupation
+      value: Master Student
     - name: Languages
-      value: English, German
+      value: Chinese, English
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+    - title: BSc in Software Engineering
+      institution: University College Dublin, Dublin, Ireland
+      year: 2019 - 2023
+      description: "GPA: 3.79/4.2"
+    - title: BEng in Software Engineering
+      institution: Beijing University of Technology, Beijing, China
+      year: 2019 - 2023
+      description: "GPA: 3.74/4.2"
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Undergraduate Researcher
+      institution: University College Dublin, Dublin, Ireland
+      year: 2022-2023
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Studied light-weight salient object detection
+        - Conducted research in geo-science and remote sensing
+    - title: Research Intern
+      institution: Tsinghua University, Beijing, China
+      year: 2022-2023
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+        - Studied generative adversarial models (GAN) and image manipulation .
+    - title: Research Intern
+      institution: University College Dublin, Dublin, Ireland
+      year: 2021-2022
       description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+        - Studied stero matching, and real-time driving scene parsing
+        - Conducted research in geoscience and remote sensing
+      
+- title: Achievements
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: <a href="#">Nerual Network and Deep Learning</a>
+      year: 2020
+      description: 
+        - <b>Coursera & DeepLearning.AI</b>
+        - Jul. 2020
+        - <a href="#"><b>Certificate</b></a>
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2022
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - 2022 Capital 'Challenge Cup' Entrepreneurship Competition, <b>Bronze Prize</b> 
+        - BJUT Scholarships for Excellent Innovation & Entrepreneurship (<b>Top 10%</b>)
+    - year: 2021 - 2022
       items: 
-        - Max Planck Medal
+        - BJUT Merit Scholarships for Academic Excellence (<b>Top 10%</b>)
+    - year: 2020 - 2021
+      items: 
+        - BDIC Merit Scholarships for Academic Excellence (<b>Top 20%</b>)
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Semantic Segmentation
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Geoscience and remote sensing
+        - Medical image processing
+    - title: Light-weight Salient Object Detection
       items:
-        - Description 1.
-        - Description 2.
+        - Building light-weight and accurate models
+        - Designing effective training strategy
+    - title: GAN and Image Manipulation
+      items:
+        - Designing GAN-based image manipulation algorithm
+        - Solving problem of attribute coupling
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Cycling, Movie, Badminton, etc.
